# BlipBuffer

./: CMakeLists.txt  README.md
demo/: 1.waveform.cpp  2.square.cpp  3.clock_rate.cpp  4.continuous.cpp  CMakeLists.txt  buffering.cpp  delta_synth.cpp  external_mixing.cpp  multiple_waves.cpp  sample_formats.cpp  sdl_audio.cpp  stereo.cpp  treble_bass.cpp
player/: player.cpp  player.h
sdl_player/: Audio_Scope.h  Sync_Audio.h
